--- a/Week1/js-exercises/projct (Random Quote Generator)/main.css
+++ b/Week1/js-exercises/projct (Random Quote Generator)/main.css
@@ -5,7 +5,7 @@
     
 }
 
-.myProject{
+#myProject{
     position: fixed;
     width:1260px ;
     height: 800px;
@@ -30,9 +30,7 @@ h1{
     text-align: center;
     color: #FFA513;
 }
-.fa-quote-left{
-    font-size: 60px;
-}
+
 h3 {
     align-self: flex-end;
     margin-right: 65px;
@@ -46,7 +44,7 @@ h3 {
 }
 #project {
     font-size: 20px;
-    border: 1px solid  #FFA513;
+    
     padding: 10px ;
     color: white;
     background-color: #FFA513;
@@ -65,7 +63,7 @@ h3 {
 }
 .fa-twitter, .fa-tumblr{
     font-size: 20px;
-    border: 1px solid  #FFA513;
+   
     padding: 10px ;
     color: white;
     background-color: #FFA513;
